<resources>
    <string name="app_name">Фитнес трекер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="km_h">0,00 км/ч</string>
    <string name="km">0,00 км</string>
    <string name="distance">ДИСТАНЦИЯ</string>
    <string name="speed">СР. СКОРОСТЬ</string>
    <string name="start">СТАРТ</string>
    <string name="stop">СТОП</string>
    <string name="time">ВРЕМЯ</string>
    <string name="run">Забег</string>
    <string name="history">История</string>
    <string name="_0_00_00">0:00:00</string>
</resources>